# World_View

./: .env.example  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.digest-notifications  LICENSE  README.md  SECURITY.md  SELF_HOSTING.md  compound-engineering.local.md  docker-compose.yml  embed.html  index.html  live-channels.html  mcp-grant.html  middleware.ts  package-lock.json  package.json  settings.html  vercel.json  vite.config.ts
.github/: pull_request_template.md
.husky/: pre-push
api/: _api-key.js  _api-key.test.mjs  _convex-error.js  _cors.js  _cors.test.mjs  _github-release.js  _oauth-token.js  _rate-limit.js  _rate-limit.test.mjs  api-route-exceptions.json  bootstrap-cors.test.mjs  bootstrap.js  chat-analyst.ts  download.js  fwdstart.js  health-cors.test.mjs  health.js  latest-brief.ts  mcp-proxy.ts  notification-channels.ts  notify.ts  oauth-protected-resource.ts  og-story.js  og-story.test.mjs  product-catalog.js  reverse-geocode.js  rss-proxy.js  seed-contract-probe.ts  seed-health.js  story.js  symbol-search.ts  user-prefs.ts  version.js  widget-agent.ts  wm-session.js  wm-session.test.mjs
blog-site/: astro.config.mjs
consumer-prices-core/: .env.example
convex/: contactMessages.ts  http.ts  mcpProTokens.ts  resendWebhookHandler.ts
docker/: Dockerfile  entrypoint.sh  (+6 more)
src-tauri/: Cargo.toml  tauri.conf.json  tauri.finance.conf.json  tauri.tech.conf.json
src-tauri/capabilities/: default.json
src-tauri/sidecar/: local-api-server.mjs  local-api-server.test.mjs
src-tauri/src/: main.rs
(+1494 files in other folders)
