[package]
name = "world-view"
version = "2.8.0"
description = "WorldView desktop application"
authors = ["WorldView"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native-sync-persistent", "crypto-rust"] }
reqwest = { version = "0.12", default-features = false, features = ["native-tls", "json"] }
getrandom = "0.2"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
opt-level = "s"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
devtools = ["tauri/devtools"]
